// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`analyzeDependencies (local) > should analyze dependencies correctly 1`] = `
[
  {
    "label": "Total Dependencies",
    "name": "totalDependencies",
    "type": "stat",
    "value": "3",
  },
  {
    "label": "Direct Dependencies",
    "name": "directDependencies",
    "type": "stat",
    "value": "2",
  },
  {
    "label": "Dev. Dependencies",
    "name": "devDependencies",
    "type": "stat",
    "value": "1",
  },
  {
    "label": "CommonJS Dependencies",
    "name": "cjsDependencies",
    "type": "stat",
    "value": "2",
  },
  {
    "label": "ESM Dependencies",
    "name": "esmDependencies",
    "type": "stat",
    "value": "1",
  },
  {
    "label": "Install Size",
    "name": "installSize",
    "type": "stat",
    "value": "299.0 B",
  },
  {
    "label": "Package Name",
    "name": "packageName",
    "type": "stat",
    "value": "test-package",
  },
  {
    "label": "Version",
    "name": "version",
    "type": "stat",
    "value": "1.0.0",
  },
]
`;

exports[`analyzeDependencies (local) > should handle empty project 1`] = `
[
  {
    "label": "Total Dependencies",
    "name": "totalDependencies",
    "type": "stat",
    "value": "0",
  },
  {
    "label": "Direct Dependencies",
    "name": "directDependencies",
    "type": "stat",
    "value": "0",
  },
  {
    "label": "Dev. Dependencies",
    "name": "devDependencies",
    "type": "stat",
    "value": "0",
  },
  {
    "label": "CommonJS Dependencies",
    "name": "cjsDependencies",
    "type": "stat",
    "value": "0",
  },
  {
    "label": "ESM Dependencies",
    "name": "esmDependencies",
    "type": "stat",
    "value": "0",
  },
  {
    "label": "Install Size",
    "name": "installSize",
    "type": "stat",
    "value": "0.0 B",
  },
  {
    "label": "Package Name",
    "name": "packageName",
    "type": "stat",
    "value": "test-package",
  },
  {
    "label": "Version",
    "name": "version",
    "type": "stat",
    "value": "1.0.0",
  },
]
`;

exports[`analyzeDependencies (local) > should handle missing node_modules 1`] = `
[
  {
    "label": "Total Dependencies",
    "name": "totalDependencies",
    "type": "stat",
    "value": "1",
  },
  {
    "label": "Direct Dependencies",
    "name": "directDependencies",
    "type": "stat",
    "value": "1",
  },
  {
    "label": "Dev. Dependencies",
    "name": "devDependencies",
    "type": "stat",
    "value": "0",
  },
  {
    "label": "CommonJS Dependencies",
    "name": "cjsDependencies",
    "type": "stat",
    "value": "0",
  },
  {
    "label": "ESM Dependencies",
    "name": "esmDependencies",
    "type": "stat",
    "value": "0",
  },
  {
    "label": "Install Size",
    "name": "installSize",
    "type": "stat",
    "value": "0.0 B",
  },
  {
    "label": "Package Name",
    "name": "packageName",
    "type": "stat",
    "value": "test-package",
  },
  {
    "label": "Version",
    "name": "version",
    "type": "stat",
    "value": "1.0.0",
  },
]
`;

exports[`analyzeDependencies (local) > should handle symlinks 1`] = `
[
  {
    "label": "Total Dependencies",
    "name": "totalDependencies",
    "type": "stat",
    "value": "1",
  },
  {
    "label": "Direct Dependencies",
    "name": "directDependencies",
    "type": "stat",
    "value": "1",
  },
  {
    "label": "Dev. Dependencies",
    "name": "devDependencies",
    "type": "stat",
    "value": "0",
  },
  {
    "label": "CommonJS Dependencies",
    "name": "cjsDependencies",
    "type": "stat",
    "value": "0",
  },
  {
    "label": "ESM Dependencies",
    "name": "esmDependencies",
    "type": "stat",
    "value": "1",
  },
  {
    "label": "Install Size",
    "name": "installSize",
    "type": "stat",
    "value": "72.0 B",
  },
  {
    "label": "Package Name",
    "name": "packageName",
    "type": "stat",
    "value": "test-package",
  },
  {
    "label": "Version",
    "name": "version",
    "type": "stat",
    "value": "1.0.0",
  },
]
`;

exports[`analyzeDependencies (tarball) > should analyze a real tarball fixture 1`] = `
[
  {
    "label": "Total Dependencies",
    "name": "totalDependencies",
    "type": "stat",
    "value": "0",
  },
  {
    "label": "Direct Dependencies",
    "name": "directDependencies",
    "type": "stat",
    "value": "0",
  },
  {
    "label": "Dev. Dependencies",
    "name": "devDependencies",
    "type": "stat",
    "value": "0",
  },
  {
    "label": "CommonJS Dependencies",
    "name": "cjsDependencies",
    "type": "stat",
    "value": "0",
  },
  {
    "label": "ESM Dependencies",
    "name": "esmDependencies",
    "type": "stat",
    "value": "0",
  },
  {
    "label": "Install Size",
    "name": "installSize",
    "type": "stat",
    "value": "226.0 B",
  },
  {
    "label": "Package Name",
    "name": "packageName",
    "type": "stat",
    "value": "test-package",
  },
  {
    "label": "Version",
    "name": "version",
    "type": "stat",
    "value": "1.0.0",
  },
]
`;
